# goit-web-homework-07

./: config.ini  pyproject.toml  queries.py  seeds.py
migration/versions/: d953b9e9982c_init.py
src/: models.py
