[tool.poetry]
name = "homework-7"
version = "0.1.0"
description = ""
authors = ["AnatoliiBrovko <116496024+AnatoliiBrovko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "homework_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.18"
faker = "^18.11.2"
psycopg2 = "^2.9.6"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
